# cpp-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: conceptual.hpp  container_wrapper.hpp  draw.hpp  gl.hpp  main.cpp  numeric.hpp  pixel-buffer.hpp
src/geometry/: axis.hpp  core.hpp  primitives.hpp  transform_base.hpp
src/geometry/2d/: shapes.hpp  transform.hpp  vector.hpp
src/geometry/3d/: shapes.hpp  transform.hpp  vector.hpp
src/gl-shaders/: basic_fs.hpp  basic_vs.hpp  grid_vs.hpp  light_fs.hpp  light_vs.hpp
src/io/: obj_reader.hpp
src/model/: Quad.hpp  Simple_Quad.hpp  Vbo_Grid.hpp
src/rng/: core.hpp
src/sample/: glwavefront_runner.hpp  perspective_tetrahedron.hpp  rectangle.hpp  tetrahedron.hpp  wavefront_runner.hpp
src/scene/: Buffered_Entity_Base.hpp  Entity_Base.hpp  Entity_Owner.hpp  Model.hpp  Scene.hpp  Solid_Sphere.hpp
src/scene/md2/: Model.hpp  header.hpp  loader.hpp
src/scene/sample/: glwavefront_runner.hpp  perspective_tetrahedron.hpp  rectangle.hpp  tetrahedron.hpp  wavefront_runner.hpp
src/scene/shader/: core.hpp
src/texture/: core.hpp
src/utility/: accessors.hpp  concepts.hpp  result.hpp
